# django-jwt-proxy

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py  test_api.py  utils.py
app/proxy/: proxy.py  router.py
app/users/: models.py  router.py
container_files/: entrypoint.sh  requirements.txt
